--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 我是index.html文件的内容
-我被做了修改
+我被做了修改  我是程序员A做出的修改
 这是进行第二次修改了，为了设置git push -u origin master的操作
 这是第三次的修改，为了验证git push 方法来提交
 我是程序员B添加的一些内容
